--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "astro": "^4.14.2",
     "astro-robots-txt": "1.0.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "@astrojs/preact": "^2.0.0"
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
