--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,19 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 20 # Usar la versión de Node.js adecuada
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install --force
+
+      - name: Build your site
+        run: pnpm build
 
       - name: Build and upload your site
         uses: withastro/action@v2
