--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "canada-dev",
+  "name": "astro-fiesta",
+  "version": "1.0.0",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/check": "0.5.6",
-    "@astrojs/tailwind": "5.1.0",
-    "@fontsource-variable/onest": "5.0.2",
-    "astro": "^4.14.2",
-    "astro-robots-txt": "1.0.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
-    "@astrojs/preact": "^2.0.0"
+    "astro": "^3.0.0"
   },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
-  }
+  "devDependencies": {}
 }
