--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,3 @@
-name: Deploy Astro Site to GitHub Pages
-
-on:
-  push:
-    branches:
-      - main  # Cambia esto si usas otro branch como `master`
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,18 +9,13 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '20'  # Especifica la versión de Node.js que necesitas
+
+    - name: Install pnpm
+      run: npm install -g pnpm
 
     - name: Install dependencies
-      run: |
-        npm install -g pnpm
-        pnpm install
+      run: pnpm install
 
-    - name: Build Astro project
-      run: pnpm run build  # o `npm run build` si usas npm en lugar de pnpm
-
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
-      with:
-        branch: gh-pages  # o el nombre de la rama en la que deseas desplegar
-        folder: dist  # la carpeta de salida del build de Astro
+    - name: Build project
+      run: pnpm run build
